--- a/MusicFiles/MusicFiles.csproj
+++ b/MusicFiles/MusicFiles.csproj
@@ -110,6 +110,8 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\MusicDirectory.cs" />
+    <Compile Include="Models\NODE_STAT.cs" />
+    <Compile Include="Models\TreeNodeProperties.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Repositories\DirectoryRepository.cs" />
