Extracting utils, added settings, added localization

--- a/MusicFiles/App.config
+++ b/MusicFiles/App.config
@@ -45,6 +45,12 @@
       <setting name="ColorForeTreeView" serializeAs="String">
         <value>Highlight</value>
       </setting>
+      <setting name="Expand" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="Language" serializeAs="String">
+        <value>en</value>
+      </setting>
     </MusicFiles.Properties.Settings>
   </userSettings>
   <applicationSettings>
