--- a/MusicFiles/Properties/Settings.settings
+++ b/MusicFiles/Properties/Settings.settings
@@ -26,5 +26,11 @@
     <Setting Name="Version" Type="System.String" Scope="Application">
       <Value Profile="(Default)">1.0</Value>
     </Setting>
+    <Setting Name="Expand" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="Language" Type="System.String" Scope="User">
+      <Value Profile="(Default)">en</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
