--- a/MusicFiles/App.config
+++ b/MusicFiles/App.config
@@ -4,9 +4,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="FileBrowser.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="MusicFiles.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="FileBrowser.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
       <section name="MusicFiles.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
@@ -26,6 +28,32 @@
   </entityFramework>
   
   <userSettings>
+    <FileBrowser.Properties.Settings>
+      <setting name="WindowLocation" serializeAs="String">
+        <value>0, 0</value>
+      </setting>
+      <setting name="WindowSize" serializeAs="String">
+        <value>600, 600</value>
+      </setting>
+      <setting name="ColorBackMenu" serializeAs="String">
+        <value>WhiteSmoke</value>
+      </setting>
+      <setting name="ColorBackTreeView" serializeAs="String">
+        <value>White</value>
+      </setting>
+      <setting name="ColorForeMenu" serializeAs="String">
+        <value>Black</value>
+      </setting>
+      <setting name="ColorForeTreeView" serializeAs="String">
+        <value>Highlight</value>
+      </setting>
+      <setting name="Expand" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="Language" serializeAs="String">
+        <value>en</value>
+      </setting>
+    </FileBrowser.Properties.Settings>
     <MusicFiles.Properties.Settings>
       <setting name="WindowLocation" serializeAs="String">
         <value>0, 0</value>
@@ -54,6 +82,14 @@
     </MusicFiles.Properties.Settings>
   </userSettings>
   <applicationSettings>
+    <FileBrowser.Properties.Settings>
+      <setting name="Title" serializeAs="String">
+        <value>File Browser</value>
+      </setting>
+      <setting name="Version" serializeAs="String">
+        <value>1.0</value>
+      </setting>
+    </FileBrowser.Properties.Settings>
     <MusicFiles.Properties.Settings>
       <setting name="Title" serializeAs="String">
         <value>Music Files</value>
