--- a/MusicFiles/Properties/Settings.settings
+++ b/MusicFiles/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="MusicFiles.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="FileBrowser.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="WindowLocation" Type="System.Drawing.Point" Scope="User">
@@ -21,7 +21,7 @@
       <Value Profile="(Default)">Highlight</Value>
     </Setting>
     <Setting Name="Title" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Music Files</Value>
+      <Value Profile="(Default)">File Browser</Value>
     </Setting>
     <Setting Name="Version" Type="System.String" Scope="Application">
       <Value Profile="(Default)">1.0</Value>
