Removed individual color settings, added theming

--- a/MusicFiles/App.config
+++ b/MusicFiles/App.config
@@ -35,23 +35,14 @@
       <setting name="WindowSize" serializeAs="String">
         <value>600, 600</value>
       </setting>
-      <setting name="ColorBackMenu" serializeAs="String">
-        <value>WhiteSmoke</value>
-      </setting>
-      <setting name="ColorBackTreeView" serializeAs="String">
-        <value>White</value>
-      </setting>
-      <setting name="ColorForeMenu" serializeAs="String">
-        <value>Black</value>
-      </setting>
-      <setting name="ColorForeTreeView" serializeAs="String">
-        <value>Highlight</value>
-      </setting>
       <setting name="Expand" serializeAs="String">
         <value>True</value>
       </setting>
       <setting name="Language" serializeAs="String">
         <value>en</value>
+      </setting>
+      <setting name="Theme" serializeAs="String">
+        <value>0</value>
       </setting>
     </FileBrowser.Properties.Settings>
     <MusicFiles.Properties.Settings>
