--- a/MusicFiles/Properties/Settings.settings
+++ b/MusicFiles/Properties/Settings.settings
@@ -8,18 +8,6 @@
     <Setting Name="WindowSize" Type="System.Drawing.Size" Scope="User">
       <Value Profile="(Default)">600, 600</Value>
     </Setting>
-    <Setting Name="ColorBackMenu" Type="System.Drawing.Color" Scope="User">
-      <Value Profile="(Default)">WhiteSmoke</Value>
-    </Setting>
-    <Setting Name="ColorBackTreeView" Type="System.Drawing.Color" Scope="User">
-      <Value Profile="(Default)">White</Value>
-    </Setting>
-    <Setting Name="ColorForeMenu" Type="System.Drawing.Color" Scope="User">
-      <Value Profile="(Default)">Black</Value>
-    </Setting>
-    <Setting Name="ColorForeTreeView" Type="System.Drawing.Color" Scope="User">
-      <Value Profile="(Default)">Highlight</Value>
-    </Setting>
     <Setting Name="Title" Type="System.String" Scope="Application">
       <Value Profile="(Default)">File Browser</Value>
     </Setting>
@@ -31,6 +19,9 @@
     </Setting>
     <Setting Name="Language" Type="System.String" Scope="User">
       <Value Profile="(Default)">en</Value>
+    </Setting>
+    <Setting Name="Theme" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
 </SettingsFile>
