--- a/FileBrowser.Tests/FileBrowser.Tests.csproj
+++ b/FileBrowser.Tests/FileBrowser.Tests.csproj
@@ -72,7 +72,7 @@
     <Content Include="TestFolder\SubDirectory\file3.mp3" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="TestFolderCopy\" />
+    <Folder Include="TestFolderEmpty\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
