--- a/FileBrowser/FileBrowser.csproj
+++ b/FileBrowser/FileBrowser.csproj
@@ -94,6 +94,12 @@
     <Compile Include="FormControls\HelpLabel.Designer.cs">
       <DependentUpon>HelpLabel.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormControls\MenuButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="FormControls\MenuButton.Designer.cs">
+      <DependentUpon>MenuButton.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormControls\MessageBoxes\ErrorMessageBox.cs" />
     <Compile Include="FormControls\MessageBoxes\WarningMessageBox.cs" />
     <Compile Include="FormControls\TreeNodes\DirectoryNotFoundTreeNode.cs" />
@@ -113,6 +119,7 @@
     <Compile Include="Forms\HelpForm.Designer.cs">
       <DependentUpon>HelpForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\DependencyController.cs" />
     <Compile Include="Models\Language\LanguageManager.cs" />
     <Compile Include="Models\Language\LanguageCollection.cs" />
     <Compile Include="Models\Language\ILocalizable.cs" />
@@ -140,16 +147,11 @@
     <Compile Include="Models\NODE_STAT.cs" />
     <Compile Include="Persistence\Repositories\IFolderRepository.cs" />
     <Compile Include="Persistence\Repositories\IExtensionRepository.cs" />
+    <Compile Include="Persistence\Repositories\RepositoryController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Persistence\Repositories\FolderRepository.cs" />
     <Compile Include="Persistence\Repositories\ExtensionRepository.cs" />
-    <Compile Include="FormControls\MenuButton.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="FormControls\MenuButton.Designer.cs">
-      <DependentUpon>MenuButton.cs</DependentUpon>
-    </Compile>
     <Compile Include="Resources\Strings.nl.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -172,6 +174,9 @@
     <EmbeddedResource Include="FormControls\HelpLabel.resx">
       <DependentUpon>HelpLabel.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormControls\MenuButton.resx">
+      <DependentUpon>MenuButton.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\HelpForm.resx">
       <DependentUpon>HelpForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -191,9 +196,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="FormControls\MenuButton.resx">
-      <DependentUpon>MenuButton.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Resources\Strings.nl.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Strings.nl.Designer.cs</LastGenOutput>
@@ -233,6 +235,9 @@
   <ItemGroup>
     <Content Include="icon.ico" />
     <None Include="Resources\Icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="UserControls\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.105.2\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.105.2\build\net451\System.Data.SQLite.Core.targets')" />
