--- a/FileBrowser/FileBrowser.csproj
+++ b/FileBrowser/FileBrowser.csproj
@@ -82,6 +82,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\DAL\FileBrowserContext.cs" />
+    <Compile Include="Domain\Models\Category.cs" />
+    <Compile Include="Domain\Models\FileExtension.cs" />
     <Compile Include="FormControls\DirectoryTreeView.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -107,28 +110,22 @@
     <Compile Include="FormControls\TreeNodes\NoDirectoriesTreeNode.cs" />
     <Compile Include="FormControls\TreeNodes\NoMatchesTreeNode.cs" />
     <Compile Include="FormControls\TreeNodes\SearchResultTreeNode.cs" />
-    <Compile Include="Forms\AboutForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\AboutForm.Designer.cs">
-      <DependentUpon>AboutForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\HelpForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\HelpForm.Designer.cs">
       <DependentUpon>HelpForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\DependencyController.cs" />
-    <Compile Include="Models\Language\LanguageManager.cs" />
-    <Compile Include="Models\Language\LanguageCollection.cs" />
-    <Compile Include="Models\Language\ILocalizable.cs" />
-    <Compile Include="Models\Themes\ColorTheme.cs" />
-    <Compile Include="Models\Themes\DarkColorTheme.cs" />
-    <Compile Include="Models\Themes\LightColorTheme.cs" />
-    <Compile Include="Models\Themes\IThemeable.cs" />
-    <Compile Include="Models\Themes\Theme.cs" />
-    <Compile Include="Models\Themes\ThemeManager.cs" />
+    <Compile Include="Domain\DependencyController.cs" />
+    <Compile Include="Domain\Language\LanguageManager.cs" />
+    <Compile Include="Domain\Language\LanguageCollection.cs" />
+    <Compile Include="Domain\Language\ILocalizable.cs" />
+    <Compile Include="Domain\Themes\ColorTheme.cs" />
+    <Compile Include="Domain\Themes\DarkColorTheme.cs" />
+    <Compile Include="Domain\Themes\LightColorTheme.cs" />
+    <Compile Include="Domain\Themes\IThemeable.cs" />
+    <Compile Include="Domain\Themes\Theme.cs" />
+    <Compile Include="Domain\Themes\ThemeManager.cs" />
     <Compile Include="Persistence\Database\FileBrowserDb.cs" />
     <Compile Include="Persistence\Database\Tables.cs" />
     <Compile Include="Forms\SettingsForm.cs">
@@ -143,8 +140,8 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\Folder.cs" />
-    <Compile Include="Models\NODE_STAT.cs" />
+    <Compile Include="Domain\Models\Folder.cs" />
+    <Compile Include="Domain\NODE_STAT.cs" />
     <Compile Include="Persistence\Repositories\IFolderRepository.cs" />
     <Compile Include="Persistence\Repositories\IExtensionRepository.cs" />
     <Compile Include="Persistence\Repositories\RepositoryController.cs" />
@@ -165,7 +162,7 @@
     </Compile>
     <Compile Include="Utils\ContextMenuBuilder.cs" />
     <Compile Include="Utils\FormUtils.cs" />
-    <Compile Include="Models\Language\LanguageMapper.cs" />
+    <Compile Include="Domain\Language\LanguageMapper.cs" />
     <Compile Include="Utils\StringExtensions.cs" />
     <Compile Include="Utils\TitleBuilder.cs" />
     <EmbeddedResource Include="FormControls\DirectoryTreeView.resx">
@@ -205,7 +202,7 @@
       <LastGenOutput>Strings.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <None Include="Models\Class Diagram.cd" />
+    <None Include="Domain\Class Diagram.cd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
